# graverse

./: CMakeLists.txt  README.md
demos/: line_bresenham.cpp  line_clipping_cohen_sutherland.cpp  line_dda.cpp  poly_scanline.cpp  transformation.cpp
include/: algo.h  graphics_factory.h  graphics_interface.h  raylib_adapter.h  terminal_adapter.h  utils.h
src/: ddaLine.cpp  raylib_adapter.cpp  terminal_adapter.cpp  utils.cpp
src/adapter/: raylib_adapter.cpp
src/algos/: bresenhamLine.cpp  cohenSutherland.cpp  ddaLine.cpp  scanLineFill.cpp
